# TradeCLI

./: README.md  pyproject.toml
application/: engine.py  translater.py
application/transformations/: constant_series.py  cross_above.py  ema.py  portfolio_simulation.py  roc.py  sma.py
interfaces/: .gitignore
interfaces/API/: server.py
interfaces/CMDI/: execute.py  tradecli.py  view.py
tradecli-db/: models.py  repo.py
tradecli-db/mock-db/: saved_requests.csv
tradecli_db/: repo.py
tradecli_db/mock-db/: fetch_transformation_data.csv  tradecli.db
